--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ header {
     transform: rotate(-405deg);
 }
 
-@media (max-width: 800px) {
+@media (max-width: 700px) {
     
     .active {
         border-bottom: 1px solid #5d3c96;
@@ -167,7 +167,7 @@ header {
         padding: 0.5em 0;
         width: 100%;
         color: #fafafa;
-        background-color: #071618;
+        background-color: #4fc4cf;
     }
 
     .menu>li:not(:last-child) {
@@ -182,6 +182,20 @@ header {
     
 
 }
+
+
+
+/* .menu {
+    list-style: none;
+
+}
+
+.menu li {
+    display: inline-block;
+    padding: 0 30px;
+} */
+
+
 
 /* image left and about-us section */
 
@@ -338,7 +352,7 @@ hr {
 
 .form-container-outer {
     
-    
+    background-color: rgba(79, 196, 207, 0.7);
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -364,7 +378,7 @@ hr {
     flex-direction: column;
     color: #3f3f3f;
     margin: 10px 0;
-    
+    background-color: rgba(229, 231, 233, 0.7);
     align-items: center;
 }
 
@@ -481,7 +495,7 @@ footer a {
     color: #fafafa;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
 
     .our-team,
     .main-bg,
