--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ header {
     font-weight: 600;
     letter-spacing: 2px;
     flex-direction: row;
-    
+    z-index: 5;
 }
 
 .logo {
@@ -65,6 +65,7 @@ header {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    z-index: 5;
 }
 
 .menu>li {
@@ -123,7 +124,7 @@ header {
     transform: rotate(-405deg);
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     
     .active {
         border-bottom: 1px solid #5d3c96;
