--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,11 +466,24 @@ hr {
     display: block;
 }
 
+.submit-form-outer {
+    display: flex;
+    flex-direction: column;
+    height: 546px;
+}
+
+.submit-form {
+    margin-top: 50px;
+}
+
+.return-home {
+    margin: 100px auto;
+}
+
 /* CV section*/
 
 .cv-outer {
-    display: flex;
-    
+    display: flex;    
 }
 
 .cv {
@@ -526,14 +539,16 @@ footer a {
     box-sizing: border-box;
     order: 3;
     padding-right: 50px;
+    padding-left: 10px;
 }
 
 #address {
-    margin-right: 10px;
-    text-align: left;
+    margin-left: auto;
+    display: flex;
     letter-spacing: 2px;
     order: 2;
-
+    flex-direction: column;
+    text-align: left;
 }
 
 #address h3 {
@@ -543,6 +558,7 @@ footer a {
 
 #address p {
     margin-top: 15px;
+    
 }
 
 .copyright {
@@ -588,7 +604,7 @@ footer a {
     /* .menu li {
         display: inline-block;
     } */
-
+    
 
     .map-footer {
         order: 2;
@@ -602,6 +618,7 @@ footer a {
     #address {
         margin: 0 25px 10px;
         order: 1;
+        
     }
 
     .form-container {
