Add content with link for copyright to footer and fix style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -563,7 +563,10 @@ footer a {
 }
 
 .copyright {
-    margin: auto;
+    font-size: small;
+    margin-right: auto;
+    padding-bottom: 3px;
+    padding-left: 5px;
 }
 
 .copyright h3 {
