Style cv-logo images to our-team section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,6 +325,12 @@ hr {
     margin-top: auto;
 }
 
+.cv-logo img {
+    width: 100%;
+    height: auto;
+    
+}
+
 .our-team-link {
     border: 1px solid #5d3c96;
     font-weight: 600;
